JVector 24: DiskANN (#28)
* Work on putting the disk in DiskANN. Update Searcher for re-ranking, SiftSmall to compare heap/disk, and misc assorted changes to allow that to be plumbed together.

* Only need RAVV in memory / when building the graph.  Use GraphIndex.View.getVector once written to disk.

* Give ReaderSupplier a default close() so we can use it with lambdas

* cleanup

* sketch of search() api changes

* Clean up visited count remnants

* Clean up unnecessary vector cache in OnDiskGraphIndex

* Quieter/more resilient SiftSmall. Deps clean up.

* Avoid score recalculation when searching with ExactScoreFunction

* Add readFloatsAt back to RandomAccessReader

* push api changes everywhere and fix stuff I missed

* Clean up tests. Fix builder logic.

* Clean up Bench tests. Switch Bench/Sift examples to use a hacked up mmap reader for semi-reasonable example duration.

* Approximate searches also should return results in worst-first order. Bench should slice from the end of search results in overquery case.

* Remove dep used only for file cleanup. Switch to best-first results from search everywhere. Remove comment already captured in issue tracker.

---------

Co-authored-by: Joel Knighton <joel.knighton@datastax.com>