@@ -44,6 +44,7 @@
       <groupId>com.carrotsearch.randomizedtesting</groupId>
       <artifactId>randomizedtesting-runner</artifactId>
       <version>2.8.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.boundary</groupId>
@@ -91,6 +92,7 @@
               <arguments>
                 <argument>-classpath</argument>
                 <classpath/>
+                <argument>--add-modules=jdk.incubator.vector</argument>
                 <argument>-ea</argument>
                 <argument>com.github.jbellis.jvector.example.SiftSmall</argument>
               </arguments>
